fix class name and gaps

--- a/src/components/mainDiv/BoxMovingField.css
+++ b/src/components/mainDiv/BoxMovingField.css
@@ -1,4 +1,4 @@
-.main_div {
+.box-moving-field {
   box-sizing: border-box;
   background: green;
   width: 800px;
